gccida/g0/get_attr_pent_pair
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:18839:1: error: must use 'enum' tag to refer to type 'attr_pent_pair'
attr_pent_pair  get_attr_pent_pair( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:18842:1: error: must use 'enum' tag to refer to type 'attr_pent_pair'
attr_pent_pair result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:18843:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // [rsp+0h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:18853:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 19258, "get_attr_pent_pair"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:18853:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 19258, "get_attr_pent_pair"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:18997:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19007:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19054:43: error: use of undeclared identifier 'recog_data_0'
&& symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19055:59: error: use of undeclared identifier 'recog_data_0'
&& ( !flag_pic || !symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1])) ) 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19067:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19083:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !aligned_operand( recog_data_0.operand[1], HImode)) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19151:38: error: use of undeclared identifier 'recog_data_0'
else if ( !q_regs_operand( ( __int64)recog_data_0.operand[0], 2) || ( ( x86_movx >> ix86_cpu) & 1) != 0 ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19162:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19179:43: error: use of undeclared identifier 'recog_data_0'
&& symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19180:59: error: use of undeclared identifier 'recog_data_0'
&& ( !flag_pic || !symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1])) ) 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19192:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative != 1 || memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19249:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], v3) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19267:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], v3) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/insn-attrtab.c:19285:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], v3) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_pent_pair/src/obj/insn-attrtab.o] Error 1
